# Personaplex-runpod

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  biome.json  check_gpu_status.py  lefthook.yml  mise.toml  package.json  pyproject.toml  start.sh
.github/workflows/: docker-image.yml
docker/: app-start.sh
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Controls.jsx  icons.jsx
frontend/src/data/: dashboardData.jsx
frontend/src/hooks/: useStoredState.js
frontend/src/styles/: 10-shell-sidebar.css  30-stage.css  40-popovers-listbox.css  50-tuning-console.css
frontend/src/utils/: sessionTrace.js  sessionTrace.test.js
moshi/: MANIFEST.in  pyproject.toml
moshi/moshi/: offline.py  rtc_opus.py  rtc_session.py  server.py  voice_select.py
moshi/moshi/models/: lm.py  loaders.py
moshi/moshi/modules/: streaming.py  transformer.py
moshi/moshi/utils/: sampling.py
moshi/moshi/web_client/: index.html
moshi/moshi/web_client/assets/: index-B5fR1F3S.js  index-B9V5pnmC.js  index-BG7UIv_R.css  index-BIjX8QAL.js  index-BKRbDaMK.js  index-BKabKPd-.js  (+24 more)
moshi/tests/: duplex_harness.py  test_caption_cfg.py  test_duplex_scenarios.py  test_hang_watchdog.py  test_inject_ritual.py  test_lm_controls.py  test_model_env.py  test_rtc_pipeline.py  test_rtc_resampler.py  test_runtime_diagnostics.py  test_session_config.py  test_sink_kv.py  test_streaming_restore.py  test_vision_chunk.py  test_vision_context.py  test_voice_select.py
scripts/: make_duplex_wavs.sh  run_duplex_regression.py
(+6 files in other folders)
