[project]
name = "personaplex-runpod"
version = "0.1.0"
description = "RunPod deployment harness for the NVIDIA PersonaPlex 7B fork of Moshi (real-time voice AI)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "camjac251" },
]
dependencies = [
    "moshi-personaplex",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "hf-transfer>=0.1.8",
]

[tool.uv.workspace]
members = ["moshi"]

[tool.uv.sources]
moshi-personaplex = { workspace = true }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
